<resources>
    <string name="app_name">فال حافظ پیشرفته</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">خانه</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">به اشتراک گذاری برنامه</string>
    <string name="menu_send">Send</string>
    <string name="menu_rating">امتیاز دهی به برنامه</string>
    <string name="menu_all">تمام فال ها</string>
    <string name="menu_fav">لیست علاقه مندی ها</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sampleEvaluation">بسیار انسان سخت کوش و پشتکاری هستید و تا نتیجه ی کار حاصل نشود دست از عمل برنمی دارید. نتایج کارتان همیشه ماندنی است و بقیه نیز از آن استفاده می کنند. شما تا آخرین لحظات زندگی به تمام آرزوهایتان خواهید رسید. به فقرا کمک کنید. نام شما و ذکر خیرتان همه جا بر سر زبانهاست.</string>
    <string name="doa">ای حافظ شیرازی! تو محرم هر رازی! تو را به خدا و شاخه نبات قسمت میدهم که هرچه صلاح و مصلحت می بینی برایم اشکار و آرزوی من بر آورده سازی. (شاید بهتر باشد برای شادی روح حضرت حافظ صلوات یا فاتحه ای نثار نمیاییم)</string>
    <string name="niat_konid">نیت کنید و روی گنبد حضرت حافظ اشارتی بفرمایید.</string>





</resources>
