<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_faves"
            android:icon="@drawable/ic_faves"
            android:title="@string/menu_fav" />
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_all" />
        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_rating" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_send" />
    </group>


</menu>
